fix: resolve 1px table border rendering issue on mobile by adjusting border-width

--- a/frontend-next-migration/src/preparedPages/ClanPages/ui/_components/clanoverview/clanViewAndSearch/ClanSearchAndView.module.scss
+++ b/frontend-next-migration/src/preparedPages/ClanPages/ui/_components/clanoverview/clanViewAndSearch/ClanSearchAndView.module.scss
@@ -59,7 +59,7 @@
 .clanList td {
     padding: 1px;
     padding-left: 3%;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 0.25vh solid #ccc;
 }
 
 .clanList tr:hover {
